Fix misaligned baseline by tweaking icon offset

--- a/packages/govuk-frontend/src/govuk/components/header/_index.scss
+++ b/packages/govuk-frontend/src/govuk/components/header/_index.scss
@@ -96,7 +96,7 @@
 
   // TEMPORARY HACKY CODE TO POSITION ONE LOGIN ICON
   .govuk-header__one-login-icon {
-    margin-top: -1px;
+    margin-top: -3px;
     margin-left: govuk-spacing(1);
     vertical-align: text-bottom;
   }
